RESOLVED FIXED314985
[WPE] /webkit/WebKitWebView/multiprocess-create-ready-close is a flaky assertion crash
https://bugs.webkit.org/show_bug.cgi?id=314985
Summary [WPE] /webkit/WebKitWebView/multiprocess-create-ready-close is a flaky assert...
Claudio Saavedra
Reported 2026-05-17 11:30:43 PDT
.
Attachments
Claudio Saavedra
Comment 1 2026-05-17 11:32:42 PDT
EWS
Comment 2 2026-05-17 21:04:20 PDT
Committed 313387@main (cb6622739d55): <https://commits.webkit.org/313387@main> Reviewed commits have been landed. Closing PR #65071 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.