[WPE] /webkit/WebKitWebView/multiprocess-create-ready-close is a flaky assertion crash https://bugs.webkit.org/show_bug.cgi?id=314985

Reviewed by Fujii Hironori.

When the process pool has no user message handler set (which happens
after webkitWebContextDispose() runs while a WebProcessProxy still
references the pool), the completion handler was silently dropped
without being called, causing an assertion.

* Source/WebKit/UIProcess/glib/WebProcessProxyGLib.cpp:
(WebKit::WebProcessProxy::sendMessageToWebContextWithReply):

Canonical link: https://commits.webkit.org/313387@main